--- a/css/grid.css
+++ b/css/grid.css
@@ -208,8 +208,8 @@ div .flex_column {
   width: 100%;
 }
 div .av_one_fifth {
-  margin-left: 3%;
-  width: 19%;
+  margin-left: 10px;
+  width: 17%;
 }
 div .av_one_fourth {
   margin-left: 6%;
